--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       e.preventDefault();
 
       const data = new FormData(form);
-      const url = "COLA_AQUI_O_URL_DA_TUA_WEBAPP"; // <-- Coloca o link do Google Apps Script
+      const url = "https://script.google.com/macros/s/AKfycbxtb-SK9g-qiJXqTJBIaxNCCOCTEkk6A97E8fZh3rd-m38qP-_VVKXxvcEUuUir1MHMFA/exec"; // <-- Coloca o link do Google Apps Script
 
       fetch(url, {
         method: "POST",
